force-app/main/default/objects/Expense__c/fields/Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>Approval_Date__c</fullName>
    <description>When expense was approved</description>
    <label>Approval Date</label>
    <type>DateTime</type>
</CustomField>