force-app/main/default/objects/Expense__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User who approved</description>
    <label>Approved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Expenses</relationshipName>
    <type>Lookup</type>
</CustomField>