force-app/main/default/objects/Expense__c/fields/Billing_Admin_Email__c.field-meta.xml
<CustomField>
    <fullName>Billing_Admin_Email__c</fullName>
    <defaultValue>&quot;mahesh.delipat@gmail.com&quot;</defaultValue>
    <label>Billing Admin Email</label>
    <type>Email</type>
</CustomField>