force-app/main/default/objects/Expense__c/fields/QBO_Expense_ID__c.field-meta.xml
<CustomField>
    <fullName>QBO_Expense_ID__c</fullName>
    <description>QuickBooks expense identifier</description>
    <externalId>true</externalId>
    <label>QBO Expense ID</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>