force-app/main/default/objects/Expense__c/fields/QBO_Sync_Error__c.field-meta.xml
<CustomField>
    <fullName>QBO_Sync_Error__c</fullName>
    <description>Error message from sync</description>
    <label>QBO Sync Error</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>