force-app/main/default/objects/Expense__c/fields/QBO_Sync_Status__c.field-meta.xml
<CustomField>
    <fullName>QBO_Sync_Status__c</fullName>
    <description>Sync status with QBO</description>
    <label>QBO Sync Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Synced</fullName>
                <default>true</default>
                <label>Not Synced</label>
            </value>
            <value>
                <fullName>Synced</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>