force-app/main/default/objects/Expense__c/fields/Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>Rejection_Reason__c</fullName>
    <description>Reason for rejection</description>
    <label>Rejection Reason</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>