force-app/main/default/objects/Expense__c/validationRules/Account_OR_Lead_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_OR_Lead_Required</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    ISBLANK(Account__c),
    ISBLANK(Lead__c)
)</errorConditionFormula>
    <errorMessage>Either Account or Lead must be selected</errorMessage>
</ValidationRule>