force-app/main/default/objects/Expense__c/validationRules/VR_Expense_Amount_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Expense_Amount_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>AND(Amount__c &lt;= 0, NOT(ISBLANK(Amount__c)))</errorConditionFormula>
    <errorDisplayField>Amount__c</errorDisplayField>
    <errorMessage>Amount must be greater than zero</errorMessage>
</ValidationRule>