force-app/main/default/objects/Expense__c/validationRules/VR_Expense_Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Expense_Future_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Expense_Date__c &gt; (TODAY() + 1)</errorConditionFormula>
    <errorDisplayField>Expense_Date__c</errorDisplayField>
    <errorMessage>Expense date cannot be in the future</errorMessage>
</ValidationRule>