force-app/main/default/objects/Expense__c/validationRules/VR_Expense_Matter_Required_When_Assigned.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_Expense_Matter_Required_When_Assigned</fullName>
    <active>true</active>
    <description>Matter(Account) is required when Status is Assigned</description>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &quot;Assigned&quot;), ISBLANK( Account__c ))</errorConditionFormula>
    <errorMessage>Matter(Lead) is required when Status is Assigned</errorMessage>
</ValidationRule>