force-app/main/default/objects/Expense__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Category__c</columns>
    <columns>Amount__c</columns>
    <columns>Expense_Date__c</columns>
    <columns>Status__c</columns>
    <columns>Account__c</columns>
    <columns>Lead__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>